--- a/ReadMe
+++ b/ReadMe
@@ -1,9 +1,9 @@
 I created this project when I have studied statistics and R for a year. 
-Those are files I created when I practice along with books or my classes.
-It Includes what I have learned at my pitt classes: statistical learning and data science, multivariate analysis, time series analysis and data mining.
+Those files include my project code and practice code.
+It Includes what I have learned: statistical learning and data science, multivariate analysis, time series analysis and data mining.
+I learned these from books, udemy, my courses, Linda, coursera and online communities. 
 
-I save my practice files and project files here, just make them to be well organized. 
-I also intend to build them day by day as a personal code shelf.
+I intend to build them day by day as a personal code shelf.
 
-Some of the materials I learned along with are referred to at the beginning of the files while some are not ...
+
 Email me at: leerongw@gmail.com
